Removed some debugging code in widget presentation. Stripped html formatting from post content/product description. Added read more control to content pieces. Added option to set number of items returned for content and product profile. Stopped php from creating structure for empty keyword sections, which otherwise performed an api query and returned 'all' records. Base CSS created for widget output.

--- a/tekserve-celebros-widgets.css
+++ b/tekserve-celebros-widgets.css
@@ -13,3 +13,51 @@
 .tekserve-celebros-related-items-single {
 	display: none;
 }
+
+p.tekserve-celebros-related-items-section-title {
+	margin: 1em 0 .25em;
+}
+
+p.tekserve-celebros-related-items-section-title strong {
+	font-weight: bold;
+	font-size: 1.5em;
+	padding-bottom: 1em;
+}
+
+.tekserve-celebros-related-items-single-data-title {
+	font-weight: bold;
+	font-size: 1.1em;
+}
+
+.tekserve-celebros-related-items-single-data {
+	margin: .5em 0;
+}
+
+.tekserve-celebros-related-items-single-image {
+	margin-top: 1em;
+}
+
+.tekserve-celebros-related-items-single-data-domain {
+	text-transform: lowercase;
+	font-size: .75em;
+}
+
+.tekserve-celebros-related-items-single-data-buy .price {
+	font-size: 2em;
+	font-weight: 900;
+}
+
+.tekserve-celebros-related-items-single-data-buy .button,
+.tekserve-celebros-related-items-single-data-readmore .button {
+	color: #fff;
+	background: #ccc;
+	font-size: 2em;
+	font-weight: 900;
+	padding: .5em;
+	display: inline-block;
+}
+
+a:hover .tekserve-celebros-related-items-single-data-buy .button,
+a:hover .tekserve-celebros-related-items-single-data-readmore .button {
+	background: #888;
+}
